# gen-ai

./: README.md
exp1/: README.md  dbos_wf.py  llama-index_exp.py  llama-index_exp2.py  main.py  ollama_exp.py  pyproject.toml
exp1/dbos_hn_cli/: main.py
exp1/dbos_hn_cli/genai/: agent.py  llm.py  utils.py
exp2/: .gitignore  README.md  db.py  main.py  pyproject.toml
