[project]
name = "exp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.15",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
]

[tool.ruff]
line-length = 127
target-version = "py313"
extend-exclude = []
exclude = [
    ".venv",
    "build",
    "dist",
    "__pypackages__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["riga"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.20",
    "ipython>=9.8.0",
    "ruff>=0.14.10",
]
